[gd_scene load_steps=12 format=3 uid="uid://d24awvjduyide"]

[ext_resource type="Texture2D" uid="uid://dhroun6galcjk" path="res://assets/Bg.png" id="1_t8vdt"]
[ext_resource type="FontFile" uid="uid://cu1b0xcfhq0l" path="res://assets/retro.ttf" id="2_1erco"]
[ext_resource type="Script" path="res://pong/main.gd" id="2_20xtn"]
[ext_resource type="Script" path="res://pong/Player.gd" id="3_2tlr2"]
[ext_resource type="Script" path="res://pong/CPU.gd" id="4_fh78u"]
[ext_resource type="Script" path="res://pong/Ball.gd" id="4_kktf4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvneq"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_toxol"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2avck"]
size = Vector2(1152, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bd83"]
size = Vector2(1153, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqdpy"]
size = Vector2(60, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_t8vdt")
centered = false
script = ExtResource("2_20xtn")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_2tlr2")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_fvneq")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_fh78u")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_fvneq")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2, 2)
collision_mask = 3
script = ExtResource("4_kktf4")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="Button" type="Button" parent="Ball"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.5
offset_right = 18.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
modulate = Color(1, 1, 1, 0)
shape = SubResource("RectangleShape2D_toxol")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -18.5)
shape = SubResource("RectangleShape2D_2avck")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(575.5, 668)
shape = SubResource("RectangleShape2D_8bd83")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-30, 324)
shape = SubResource("RectangleShape2D_fqdpy")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1180, 324)
shape = SubResource("RectangleShape2D_fqdpy")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_1erco")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_1erco")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="Ball/Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
